--- a/src/App.css
+++ b/src/App.css
@@ -27,21 +27,48 @@
   to { transform: rotate(360deg); }
 }
 
+
+// Major DOM settings
 html { margin: 2em; }
 body { font-family: 'Lato', sans-serif; background-color:#232323; color: #efefef;}  
 a:link, a:visited { color:#8a83ff; }
 div  {color:#aaa;}
 h1   { text-align:center; font-weight:normal;}
 
+
+// IDs
 #remaining_time {font-size: 160px; font-family: 'Lato', sans-serif; color: #fff; text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #ff0080, 0 0 30px #ff0080, 0 0 40px #ff0080, 0 0 55px #ff0080, 0 0 75px #ff0080; font-variant: small-caps; } 
 #clock { font-family: 'Lato', sans-serif; text-align:center; }
 #name { font-variant:small-caps; }
 #next_period_name { font-variant:small-caps; margin-left: 1em;  }
 #period { font-variant:small-caps; }
-#counter { font-family: 'Lato', sans-serif; font-size: 6em; }
-.center-text { text-align: center; }
-.panel {float:left; height:22rem;}
+#counter { font-family: 'Lato', sans-serif; font-size: 6em; text-align: center;}
 
+// Classes
+.center-text { text-align: center; }
+.panel {float:left;}
+.panel.left { width: 70%; }
+.panel.right { width: 30%; }
+.panel.major {height:22rem; }
+.schedule_selector { height: 1.5em; }
+.timer_countdown {
+  text-align: center;
+  font-size: 4em;
+}
+.timer_info {
+  text-align: center;
+  font-size: 1.5em; 
+  margin-top: 1em;
+}
+
+.timer_settings {
+  font-size: 1.25em;
+  font-variant: small-caps;
+  color:#666;
+}
+
+
+// minor dom settings
 button {
     display: inline-block;
     border: none;
@@ -62,3 +89,4 @@ button {
 button:hover, button:focus {background: #0053ba; }
 button:focus {outline: 1px solid #fff; outline-offset: -4px; }
 button:active {transform: scale(0.99); }
+
